--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Fly Deploy
 on:
   push:
     branches:
-      - master # thay đổi thành main nếu cần
+      - main # thay đổi thành main nếu cần
 jobs:
   deploy:
     name: Deploy app
