--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,15 @@
-name: Fly Deploy
+name: Deploy to Heroku
 on:
   push:
     branches:
-      - main # thay đổi thành main nếu cần
+      - main # hoặc main nếu bạn sử dụng tên nhánh chính là main
 jobs:
-  deploy:
-    name: Deploy app
+  build:
     runs-on: ubuntu-latest
-    concurrency: deploy-group # tùy chọn: đảm bảo chỉ một hành động chạy một lúc
     steps:
-      - uses: actions/checkout@v4
-      - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl launch
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.13.15 # Sử dụng action này để deploy
+        with:
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+          heroku_app_name: "adguardhome" # Phải là tên duy nhất trên Heroku
+          heroku_email: "hungh6122@gmail.com"
